--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Assignment 3</title>
+	<title>Migi Bell</title>
 	<meta charset="utf-8">
  	<link rel='stylesheet' type='text/css' href='css/style.css'>
 <!--  	<link href='https://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'> -->
